examples/typechecking/impredicativity.an

id x = x

ids = [freeze id]

auto (x: forall a. fn a -> a) = x (freeze x)

auto_prime (x: forall a. fn a -> a) = x x

f5 = auto (freeze id)

// bad f =
//     f 42, f true  // error expected

poly (f: forall a. fn a -> a) =
    f 42, f true

f9 =
    f = revapp (freeze id)
    f poly

choose (x: a) (y: a) = x

a5 = id auto
a6 = id auto_prime
a6_ = id (freeze auto_prime)

a7 = choose id auto
// a8 = choose id auto_prime // error expected

// args: -e ast-t --no-color
// expected exit status: 1
// expected stdout:
// (id: fn _ -> _ can _) (x: _) = (x: _)
// 
// (ids: _) = (error)
// 
// (auto: fn (error) -> _ can _) ((x: (error))) = (x: (error)) (error)
// 
// (auto_prime: fn (error) -> _ can _) ((x: (error))) = (x: (error)) (x: (error))
// 
// (f5: _) = (auto: fn (error) -> _ can _) (error)
// 
// (poly: fn (error) -> _, _ can _) ((f: (error))) =
//     (f: (error)) 42 (,: fn _ _ -> _, _ pure) (f: (error)) true
// 
// (f9: _) =
//     (f: fn (fn (error) -> _, _ can _) [_] -> _ can _) = (revapp: (error)) (error)
//     (f: fn (fn (error) -> _, _ can _) [_] -> _ can _) (poly: fn (error) -> _, _ can _)
// 
// (choose: fn a a -> a can _) ((x: a)) ((y: a)) = (x: a)
// 
// (a5: fn (error) -> _ can _) = (id: fn (fn (error) -> _ can _) -> fn (error) -> _ can _ can _) (auto: fn (error) -> _ can _)
// 
// (a6: fn (error) -> _ can _) = (id: fn (fn (error) -> _ can _) -> fn (error) -> _ can _ can _) (auto_prime: fn (error) -> _ can _)
// 
// (a6_: _) = (id: fn _ -> _ can _) (error)
// 
// (a7: fn (error) -> (error) can _) = (choose: fn (fn (error) -> (error) can _) (fn (error) -> (error) can _) -> fn (error) -> (error) can _ can _) (id: fn (error) -> (error) can _) (auto: fn (error) -> (error) can _)

// expected stderr:
// examples/typechecking/impredicativity.an:4:7
// 4 | ids = [freeze id]	// error: Expected an expression but found `[`
//   |       ^
// 
// examples/typechecking/impredicativity.an:6:10
// 6 | auto (x: forall a. fn a -> a) = x (freeze x)	// error: Expected a type but found `forall`
//   |          ^^^^^^
// 
// examples/typechecking/impredicativity.an:6:36
//   | // error: Expected an expression but found `freeze`
// 6 | auto (x: forall a. fn a -> a) = x (freeze x)
//   |                                    ^^^^^^
// 
// examples/typechecking/impredicativity.an:8:16
//  8 | auto_prime (x: forall a. fn a -> a) = x x	// error: Expected a type but found `forall`
//    |                ^^^^^^
// 
// examples/typechecking/impredicativity.an:10:12
// 10 | f5 = auto (freeze id)	// error: Expected an expression but found `freeze`
//    |            ^^^^^^
// 
// examples/typechecking/impredicativity.an:15:10
// 15 | poly (f: forall a. fn a -> a) =	// error: Expected a type but found `forall`
//    |          ^^^^^^
// 16 |     f 42, f true
// 
// examples/typechecking/impredicativity.an:19:9
// 18 | f9 =
// 19 |     f = revapp (freeze id)	// error: `revapp` not found in scope
//    |         ^^^^^^
// 20 |     f poly
// 
// examples/typechecking/impredicativity.an:19:17
// 18 | f9 =
// 19 |     f = revapp (freeze id)	// error: Expected an expression but found `freeze`
//    |                 ^^^^^^
// 20 |     f poly
// 
// examples/typechecking/impredicativity.an:26:11
// 25 | a6 = id auto_prime
// 26 | a6_ = id (freeze auto_prime)	// error: Expected an expression but found `freeze`
//    |           ^^^^^^
// 
// Found 9 errors and 0 warnings

